# LLM-from-scratch

./: .gitignore  README.md  llm.ipynb  pyproject.toml  pytorch_modulelist_and_unpack.md
Karpathy LLM  Course/: class1.ipynb  class2.ipynb  class3.ipynb  class4.ipynb  class4_2.ipynb  class5.ipynb  class6.ipynb
scifi-demo/: all_code.ipynb
