[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "graphviz>=0.21",
    "matplotlib>=3.9.4",
    "micrograd>=0.1.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "requests==2.31.0",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "tqdm>=4.67.3",
]
